# ps2-discord-room-bot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
src/: config.rs  main.rs
