[package]
name = "ps2-discord-room-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11", default_features = false, features = ["gateway", "http", "cache", "client", "builder", "model", "utils", "rustls_backend"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
lazy_static = "1.4"
# r2d2 = "0.8"
# r2d2_sqlite = "0.22"
# rusqlite = { version = "0.29", features = ["bundled"] }